fix: :bug: Fix en overlapping de iconos en barra lateral

--- a/chrome_extension/css/styles.scss
+++ b/chrome_extension/css/styles.scss
@@ -740,9 +740,11 @@ body {
     overflow: hidden;
 
     .reason:before{
+      pointer-events: none;
       opacity: 0;
+      overflow:hidden
     }
-  
+
     &:hover{
       max-height: 600px;
 
